# Quadruple_tanks_control

./: .gitignore  ANIMATION_GUIDE.md  PROJECT_OVERVIEW.md  README.md  TIPS_AND_TRICKS.md  __main__.py  controller.py  generate_gif.py  pyproject.toml  quadruple_tank_modeling.aux  quadruple_tank_modeling.fdb_latexmk  quadruple_tank_modeling.fls  quadruple_tank_modeling.out  quadruple_tank_modeling.tex  quick_start.py  requirements.txt  run_simulation.py  setup.py
examples/: animation_demo.py  basic_control.py  detailed_visualization.py  gain_tuning.py  generate_system_diagram_realistic.py  simple_animation.py
quadruple_tanks/: __init__.py
quadruple_tanks/animation/: __init__.py  animator.py
quadruple_tanks/controllers/: __init__.py  pid_controller.py  simple_controller.py
quadruple_tanks/models/: __init__.py  quadruple_system.py  tank.py
quadruple_tanks/simulation/: __init__.py  simulator.py
quadruple_tanks/utils/: __init__.py  helpers.py
tests/: test_quadruple_tanks.py
